Bug 423279 - Android: some dockers don't fully respond to finger clicks
Summary: Android: some dockers don't fully respond to finger clicks
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.3.0
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-20 16:12 UTC by AppTest
Modified: 2020-10-07 10:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2020-06-20 16:12:21 UTC
SUMMARY
Certain Dockers in Krita fail to respond to finger clicks and act as though nothing happened.


STEPS TO REPRODUCE
-Toolbox docker: Cannot select a tool with finger-click. But it does respond to finger scrolling if you thin the docker into a column thats 1 icon wide.

-Layer docker: You cannot toggle the visibility of a layer on or off when trying to finger-click the eye icon. Behavior is normal with a mouse or S-Pen.

Brush Preset History docker: When selecting a brush with the finger, your brush preset will not actually change to the selected brush, even though the chosen brush in the Brush Preset History docker becomes highlighted in blue. Behavior is normal when using a bluetooth mouse or Samsung S-Pen.

OBSERVED RESULT
No actual clicks happen.

EXPECTED RESULT
The click is recognized and processed.

SOFTWARE/OS VERSIONS
Android build based on 4.3.0 stable
Comment 1 sh_zam 2020-10-07 10:02:33 UTC
Git commit 993aab3ca4a0f53f676a93a6d5864556d22e2775 by Sharaf Zaman.
Committed on 07/10/2020 at 10:02.
Pushed by szaman into branch 'krita/4.3'.

Android: activate Kinetic scrolling

The hack I wrote was incomplete and dirty. We already have
a great mechnism for kinetic scrolling.
Related: bug 421997

D  +0    -69   3rdparty/ext_qt/0101-Explicity-handle-touchEvents-in-QAbstractScrollArea-.patch
M  +0    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    libs/ui/kis_config.cc
M  +5    -0    libs/widgetutils/KisKineticScroller.cpp

https://invent.kde.org/graphics/krita/commit/993aab3ca4a0f53f676a93a6d5864556d22e2775
Comment 2 sh_zam 2020-10-07 10:03:24 UTC
Git commit cd04988ed35bfde9b9cecf794fa1745108870153 by Sharaf Zaman.
Committed on 07/10/2020 at 10:03.
Pushed by szaman into branch 'master'.

Android: activate Kinetic scrolling

The hack I wrote was incomplete and dirty. We already have
a great mechnism for kinetic scrolling.
Related: bug 421997


(cherry picked from commit 993aab3ca4a0f53f676a93a6d5864556d22e2775)

D  +0    -69   3rdparty/ext_qt/0101-Explicity-handle-touchEvents-in-QAbstractScrollArea-.patch
M  +0    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    libs/ui/kis_config.cc
M  +5    -0    libs/widgetutils/KisKineticScroller.cpp

https://invent.kde.org/graphics/krita/commit/cd04988ed35bfde9b9cecf794fa1745108870153
Comment 3 sh_zam 2020-10-07 10:03:58 UTC
Git commit ba15f96dc90b5b0e7e7ee9bfe4dc9b18fa913f85 by Sharaf Zaman.
Committed on 07/10/2020 at 10:03.
Pushed by szaman into branch 'krita/4.4.0'.

Android: activate Kinetic scrolling

The hack I wrote was incomplete and dirty. We already have
a great mechnism for kinetic scrolling.
Related: bug 421997


(cherry picked from commit 993aab3ca4a0f53f676a93a6d5864556d22e2775)

D  +0    -69   3rdparty/ext_qt/0101-Explicity-handle-touchEvents-in-QAbstractScrollArea-.patch
M  +0    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    libs/ui/kis_config.cc
M  +5    -0    libs/widgetutils/KisKineticScroller.cpp

https://invent.kde.org/graphics/krita/commit/ba15f96dc90b5b0e7e7ee9bfe4dc9b18fa913f85