Android: activate Kinetic scrolling

The hack I wrote was incomplete and dirty. We already have
a great mechnism for kinetic scrolling.

BUG:423279
BUG:421997


(cherry picked from commit 993aab3ca4a0f53f676a93a6d5864556d22e2775)